--- a/src/styles/-dataOverview.scss
+++ b/src/styles/-dataOverview.scss
@@ -98,8 +98,8 @@
     }
   }
   .title-view{
-    height: 24px;
-    line-height: 24px;
+    height: 26px;
+    line-height: 26px;
     margin-bottom: 10px;
     .title{
       font-size: 16px;
@@ -141,8 +141,8 @@
         padding: 0 10px;
         height: 26px;
         text-align: center;
-        line-height: 24px;
-        border: 1px solid #e1e3ea;
+        line-height: 22px;
+        border: 1px solid rgba(225,227,234,.2);
         color: #9ea5af;
         font-size: 12px;
         box-sizing: border-box;
@@ -162,6 +162,128 @@
         z-index: 1;
         &:hover{
           color: #fff;
+        }
+      }
+    }
+  }
+  .depart-title{
+    margin:0 -25px;
+    height: 24px;
+    padding-left: 24px;
+    position: relative;
+    &:before{
+      content:'';
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 5px;
+      border-left: 8px solid #e7ba62;
+      border-top: 8px dashed transparent;
+      border-bottom: 8px dashed transparent;
+      border-right: none;
+    }
+    span{
+      display: block;
+      height: 26px;
+      line-height: 26px;
+      font-size: 15px;
+      color: #fff;
+    }
+  }
+  .slide-panel{
+    height: 220px;
+    margin: 0 -25px;
+    overflow: hidden;
+    .slide-box{
+      height: 100%;
+      white-space: nowrap;
+      overflow: hidden;
+      padding-top: 20px;
+      position: relative;
+      .item-slide{
+        display: inline-block;
+        padding: 0 0 0 30px;
+        &.active{
+          .item-box{
+            &:before{
+              opacity: 0;
+            }
+            .depart-list{
+              box-shadow: 0 4px 20px rgba(2,6,26,.5);
+            }
+          }
+        }
+        .item-box{
+          width: 100%;
+          cursor: pointer;
+          position: relative;
+          &:before{
+            content:'';
+            display: block;
+            position: absolute;
+            left:0;
+            top:30px;
+            bottom:0;
+            right:0;
+            background: #1e2548;
+            opacity: .4;
+            transition: opacity .5s;
+          }
+          .title-panel{
+            height: 30px;
+            position: relative;
+            &::before{
+              content:'';
+              display: block;
+              position: absolute;
+              left:0;
+              top: 0;
+              width: 100%;
+              height: 100%;
+              background: linear-gradient(to right,rgba(43,49,82,0),rgba(43,49,82,.8) 90%)
+            }
+            span{
+              display: block;
+              height: 30px;
+              line-height: 30px;
+              font-size: 14px;
+              color: #fff;
+              padding: 0 0 0 15px;
+              position: relative;
+              z-index: 2;
+            }
+          }
+          .depart-list{
+            width: 100%;
+            background: #1d2446;
+            box-shadow: 0 4px 10px rgba(2,6,26,.27);
+            padding: 0 14px 5px;
+            .item-depart{
+              display: flex;
+              height: 36px;
+              .txt-name{
+                color: #749bc2;
+              }
+              .txt-name,.txt-value,.txt-percent{
+                font-size: 13px;
+                line-height: 35px;
+              }
+              .txt-value,.txt-percent{
+                color: #45c4ff;
+              }
+              .txt-value{
+                flex:1;
+                text-align: center;
+                span{
+                  display: inline-block;
+                  text-align: right;
+                }
+              }
+            }
+            .item-depart+.item-depart{
+              border-top: 1px solid rgba(255,255,255,.1)
+            }
+          }
         }
       }
     }
@@ -231,24 +353,26 @@
     height: 310px;
     margin-top: 15px;
   }
-  .map-chart{
-    float: left;
-    width: 54%;
-    .chart-canvas{
-      height: 245px;
-      line-height: 245px;
-      div{
-        display: inline-block;
-        vertical-align: middle;
+  .chart-view{
+    height: 480px;
+    .map-chart{
+      width:70%;
+      height: 100%;
+      float:left;
+      margin-top: -10px;
+      .chart-canvas{
+        height: 100%;
       }
     }
-  }
-  .top-ten{
-    float: right;
-    width: 46%;
-    .chart-canva{
-      height: 242px;
+    .top-ten{
+      width: 30%;
+      height: 100%;
+      float:right;
+      .chart-canvas{
+        height: 480px;
+      }
     }
+
   }
   &.score-top{
     padding-bottom: 22px;
