--- a/src/styles/-dataOverview.scss
+++ b/src/styles/-dataOverview.scss
@@ -92,6 +92,9 @@
   background-image: linear-gradient(131deg, #24335b 0%, #1c1f40 100%);
   padding: 22px 25px 20px;
   margin-bottom: 20px;
+  &.region-panel{
+    padding: 22px 25px 0;
+  }
   &.money-page{
     .module-top{
       padding: 30px 30px 20px;
@@ -184,14 +187,14 @@
     }
     span{
       display: block;
-      height: 26px;
-      line-height: 26px;
+      height: 24px;
+      line-height: 24px;
       font-size: 15px;
       color: #fff;
     }
   }
   .slide-panel{
-    height: 220px;
+    height: 236px;
     margin: 0 -25px;
     overflow: hidden;
     .slide-box{
@@ -208,8 +211,16 @@
             &:before{
               opacity: 0;
             }
+            .title-panel{
+              &:before{
+                opacity: 0;
+              }
+            }
             .depart-list{
-              box-shadow: 0 4px 20px rgba(2,6,26,.5);
+              box-shadow: 0 4px 20px rgba(88,181,214,.6);
+              &:before{
+                background: linear-gradient(to bottom,#1d2446,#58b5d6);
+              }
             }
           }
         }
@@ -232,7 +243,7 @@
           .title-panel{
             height: 30px;
             position: relative;
-            &::before{
+            &:before{
               content:'';
               display: block;
               position: absolute;
@@ -240,6 +251,8 @@
               top: 0;
               width: 100%;
               height: 100%;
+              opacity: 1;
+              transition: opacity .5s;
               background: linear-gradient(to right,rgba(43,49,82,0),rgba(43,49,82,.8) 90%)
             }
             span{
@@ -257,7 +270,26 @@
             width: 100%;
             background: #1d2446;
             box-shadow: 0 4px 10px rgba(2,6,26,.27);
-            padding: 0 14px 5px;
+            transition: box-shadow .5s;
+            padding: 0 1px 1px;
+            position: relative;
+            &:before{
+              content:'';
+              display: block;
+              position: absolute;
+              left:0;
+              top:0;
+              width: 100%;
+              height:100%;
+              background: #1d2446;
+              z-index: 1;
+            }
+            .depart-wrap{
+              position: relative;
+              background: #1d2446;
+              padding: 0 14px 4px;
+              z-index: 2;
+            }
             .item-depart{
               display: flex;
               height: 36px;
