--- a/src/styles/-variables.scss
+++ b/src/styles/-variables.scss
@@ -17,6 +17,7 @@ $lightPrimaryBorder: #d5e7ff;
 //font size
 $fontsize10:10px;
 $fontsize11:11px;
+$fontsize12:12px;
 $fontsize13:13px;
 $fontsize14:14px;
 $fontsize15:15px;
@@ -27,6 +28,7 @@ $fontsize19:19px;
 $fontsize20:20px;
 $fontsize21:21px;
 $fontsize23:23px;
+$fontsize24:24px;
 $fontsize25:25px;
 $fontsize27:27px;
 $fontsize28:28px;
