--- a/src/styles/-MemberCompare.scss
+++ b/src/styles/-MemberCompare.scss
@@ -5,7 +5,7 @@
     font-display: swap;
 }
 .memberTit{
-    padding:19px 30px 0px 30px;
+    padding:19px 22px 0px 22px;
     position: relative;
     &:after{
         position: absolute;
@@ -279,7 +279,7 @@
         li{
             a{
                 flex:1;
-                padding:12px 35px 12px 12px;
+                padding:12px 35px 12px 22px;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
@@ -473,7 +473,7 @@
         li{
             a{
                 flex:1;
-                padding:12px 35px 12px 12px;
+                padding:12px 35px 12px 20px;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
@@ -1052,6 +1052,7 @@
         }
         .dealRankTop{
             margin-left:-20px;
+            margin-bottom:37px;
             &:after{
                 content: '';
                 display: block;
@@ -1059,13 +1060,36 @@
             }
         }
         .payMember{
-            margin-top:37px;
         }
     }
     .dealRankRight{
-        float: right;
+        float: left;
         width:24.5%;
         padding-left: 10px;
+    }
+    &.active{
+        .dealRankLeft{
+            float:none;
+            width:100%;
+            padding-right: 0px;
+            .dealRankTop{
+            }
+            .memberInquiry{
+                width:calc(25% - 20px);
+            }
+            .memberDeal{
+                width:calc(25% - 20px);
+            }
+            .millionDeal{
+                width:calc(25% - 20px);
+            }
+            .dealRankRight{
+                width:calc(25% - 20px);
+                margin-left:20px;
+                padding-right:0px;
+                padding-left:0px;
+            }
+        }
     }
 }
 @media screen and(max-width:1600px){
@@ -1086,12 +1110,17 @@
                         height: auto!important;
                         li{
                             float: left;
-                            padding: 13px 0px;
+                            padding:0px;
                             margin-left: 20px;
                             width: calc(33.3333% - 20px);
                             .userImg{
                                 padding-left: 15px;
                                 width: 75px;
+                            }
+                            &:first-child,&:first-child+li,&:first-child+li+li{
+                                a{
+                                    border-top:0px;
+                                }
                             }
                         }
                     }
