--- a/src/styles/-singleperson.scss
+++ b/src/styles/-singleperson.scss
@@ -14,6 +14,7 @@
             line-height: 25px;
         }
         .departItems{
+            line-height:30px;
             span{
                 color: #4c4c4c;
                 font-size:$fontsize14;
@@ -44,8 +45,47 @@
                     }
                 }
             }
+            .departItemBtn{
+                display: inline-block;
+                font-style: normal;
+                color: #2f88ff;
+                font-size:$fontsize12;
+                line-height:30px;
+                margin-left:15px;
+                cursor: pointer;
+                &:hover{
+                    text-decoration: underline;
+                }
+            }
+            .date-range{
+                width:200px;
+                border-radius:0;
+                position:relative;
+                height:30px;
+                padding:3px 25px 3px 8px;
+                border:1px solid #e1e3ea;
+                background: none;
+                vertical-align: top;
+                span.el-range-separator{
+                    background: none;
+                    padding: 6px 6px;
+                    width: auto;
+                    margin: 0px;
+                    line-height: 23px;
+                }
+                &.el-range-editor--mini .el-range-input{background: none;}
+                &.el-date-editor .el-range__icon{
+                    float:right;
+                    margin-left:0;
+                    position:absolute;
+                    right:0;
+                    top:0;
+                    &:before{
+                    vertical-align:middle;
+                    }
+                }
+            }
         }
-        
     }
     .choosePerson{
             &.active{
@@ -575,6 +615,31 @@
                 background: none;
                 border-left: 3px solid #fff;
                 border-right: 3px solid #fff;
+            }
+        }
+        &.Line{
+            .line2{
+                margin-left: 32px;
+                padding-left: 26px;
+                &:before{
+                    left: 0;
+                    top: 5px;
+                    width: 19px;
+                    height: 3px;
+                    background-color: #5fce45;
+                }
+                &:after{
+                    content: '';
+                    display: block;
+                    position: absolute;
+                    left: 4px;
+                    top: 5px;
+                    width: 11px;
+                    height: 3px;
+                    background: none;
+                    border-left: 3px solid #fff;
+                    border-right: 3px solid #fff;
+                }
             }
         }
     }
