--- a/src/styles/-productAnalysis.scss
+++ b/src/styles/-productAnalysis.scss
@@ -158,7 +158,7 @@
                                 position:relative;
                                 line-height:1;
                                 padding-top:8px;
-                                color:rgba(255,255,255,0.8);
+                                color:#fff;
                                 &:after{
                                     content:'';
                                     position:absolute;
@@ -758,7 +758,7 @@
                 border-radius:0px;
             }
             &>span{
-                font-size:$fontsize18;
+                font-size:$fontsize19;
                 color:#161616;
                 font-weight: bold;
             }
@@ -1061,7 +1061,7 @@
         background:#fff;
         margin-bottom:20px;
         .enquirieTrendTit{
-            font-size:$fontsize16;
+            font-size:$fontsize18;
             position:relative;
             line-height:20px;
             padding-left:30px;
@@ -1069,7 +1069,6 @@
             span{
                 font-size:$fontsize13;
                 color:#787878;
-                font-weight:normal;
             }
         }
         .enquirieTrendBox{
@@ -1250,7 +1249,7 @@
                     display:block;
                     position:relative;
                     padding-left:25px;
-                    font-size:$fontsize16;
+                    font-size:$fontsize18;
                     margin-bottom:90px;
                     color:#111111;
                     font-weight:bold;
@@ -1422,9 +1421,9 @@
                             }
                         }
                         &.active{   
-                            border:1px solid #0048ff!important;    
+                            border:1px solid #3e87ff!important;    
                             .yearNum{
-                                color:#0048ff!important;
+                                color:#3e87ff!important;
                             }   
                             &:before{
                                 display: none;
@@ -1995,24 +1994,329 @@
             }
         }
     }
+    .transfer-dialogPro{
+        .el-dialog__title{font-weight: bold;}
+        .el-dialog__footer{padding: 15px;}
+        .transfer-panel{
+            clear: both;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .transferFlTit{
+                clear: both;
+                display: block;
+                height: 40px;
+                line-height: 40px;
+                background: #F5F7FA;
+                margin: 0;
+                padding-left: 15px;
+                border-bottom: 1px solid #e6ebf5;
+                box-sizing: border-box;
+                color: #000000;
+            }
+            .transferFl{
+                flex: 1;
+                border: 1px solid #e6ebf5;
+                border-radius: 4px;
+                overflow: hidden;
+                background: #FFFFFF;
+                display: inline-block;
+                vertical-align: middle;
+                width: 200px;
+                max-height: 100%;
+                box-sizing: border-box;
+                position: relative;
+                .transferBox{
+                    height: 360px !important;
+                    overflow: auto;
+                    padding:10px 5px;
+                    dl{
+                        clear: both;
+                        padding:5px 10px;
+                        dt{
+                            clear: both;
+                            padding:0px 0px;
+                            cursor: pointer;
+                            i{
+                                float: left;
+                                width: 12px;
+                                height: 12px;
+                                border: 1px solid #ccc;
+                                margin-top: 2px;
+                                margin-right: 10px;
+                                border-radius:3px;
+                            }
+                            span{
+                                float: left;
+                                color: #333;
+                                font-size:$fontsize14;
+                            }
+                        }
+                        dd{
+                            clear: both;
+                            display: none;
+                            cursor: pointer;
+                            padding:5px 0px 5px 22px;
+                            i{
+                                float: left;
+                                width: 12px;
+                                height: 12px;
+                                border: 1px solid #ccc;
+                                margin-top: 2px;
+                                margin-right: 10px;
+                                border-radius:3px;
+                            }
+                            span{
+                                float: left;
+                                color: #333;
+                                font-size:$fontsize14;
+                            }
+                            &.isOn{
+                                i{
+                                    background:#0048ff;
+                                    position: relative;
+                                    border: 1px solid #0048ff;
+                                    &:after{
+                                        content: '';
+                                        position: absolute;
+                                        left: 1px;
+                                        width: 8px;
+                                        height: 0;
+                                        top: 4px;
+                                        border-bottom: 2px solid #fff;
+                                    }
+                                }
+                            }
+                        }
+                        &.isOn{
+                            dt{
+                                i{
+                                    background:#0048ff;
+                                    position: relative;
+                                    border: 1px solid #0048ff;
+                                    &:after{
+                                        content: '';
+                                        position: absolute;
+                                        left: 1px;
+                                        width: 8px;
+                                        height: 0;
+                                        top: 4px;
+                                        border-bottom: 2px solid #fff;
+                                    }
+                                }
+                            }
+                        }
+                        &.isDisplay{
+                            dd{
+                                display: block;
+                            }
+                        }
+                    }
+                }
+            }
+            .transferFr{
+                flex: 1;
+                border: 1px solid #e6ebf5;
+                border-left:0px;
+                border-radius: 4px;
+                overflow: hidden;
+                background: #FFFFFF;
+                display: inline-block;
+                vertical-align: middle;
+                width: 200px;
+                max-height: 100%;
+                box-sizing: border-box;
+                position: relative;
+                .transferBox{
+                    height: 360px !important;
+                    overflow: auto;
+                    padding: 10px 5px;
+                    p{
+                        clear: both;
+                        padding:5px 10px;
+                        cursor: pointer;
+                        overflow: hidden;
+                        i{
+                            float: left;
+                            width: 12px;
+                            height: 12px;
+                            border: 1px solid #ccc;
+                            margin-top: 2px;
+                            margin-right: 10px;
+                            border-radius:3px;
+                        }
+                        span{
+                            float: left;
+                            color: #333;
+                            font-size:$fontsize14;
+                        }
+                    }
+                }
+            }
+
+        }
+    }
     .transfer-dialog{
         .el-dialog__header{display: none;}
         .el-dialog__body{padding:0px!important;}
         .el-dialog__footer{background: #f5f5f5;padding: 15px;}
-        .el-transfer{
-            height: calc(100% - 100px);
+        .transfer-panel{
+            clear: both;
             display: flex;
             justify-content: center;
             align-items: center;
-            .el-transfer-panel:nth-child(2){border-left:0px;}
-        }
-        .el-transfer-panel{
-            width:50%;
-            height: 100%;
-            border-radius:0px;
-        }
-        .el-transfer-panel__list{
-            height:100%!important;
+            .transferFlTit{
+                clear: both;
+                display: block;
+                height: 40px;
+                line-height: 40px;
+                background: #F5F7FA;
+                margin: 0;
+                padding-left: 15px;
+                border-bottom: 1px solid #e6ebf5;
+                box-sizing: border-box;
+                color: #000000;
+            }
+            .transferFl{
+                flex: 1;
+                border: 1px solid #e6ebf5;
+                border-radius: 4px;
+                overflow: hidden;
+                background: #FFFFFF;
+                display: inline-block;
+                vertical-align: middle;
+                width: 200px;
+                max-height: 100%;
+                box-sizing: border-box;
+                position: relative;
+                .transferBox{
+                    height: 360px !important;
+                    overflow: auto;
+                    padding:10px 5px;
+                    dl{
+                        clear: both;
+                        padding:5px 10px;
+                        dt{
+                            clear: both;
+                            padding:0px 0px;
+                            cursor: pointer;
+                            i{
+                                float: left;
+                                width: 12px;
+                                height: 12px;
+                                border: 1px solid #ccc;
+                                margin-top: 2px;
+                                margin-right: 10px;
+                                border-radius:3px;
+                            }
+                            span{
+                                float: left;
+                                color: #333;
+                                font-size:$fontsize14;
+                            }
+                        }
+                        dd{
+                            clear: both;
+                            display: none;
+                            cursor: pointer;
+                            padding:5px 0px 5px 22px;
+                            i{
+                                float: left;
+                                width: 12px;
+                                height: 12px;
+                                border: 1px solid #ccc;
+                                margin-top: 2px;
+                                margin-right: 10px;
+                                border-radius:3px;
+                            }
+                            span{
+                                float: left;
+                                color: #333;
+                                font-size:$fontsize14;
+                            }
+                            &.isOn{
+                                i{
+                                    background:#0048ff;
+                                    position: relative;
+                                    border: 1px solid #0048ff;
+                                    &:after{
+                                        content: '';
+                                        position: absolute;
+                                        left: 1px;
+                                        width: 8px;
+                                        height: 0;
+                                        top: 4px;
+                                        border-bottom: 2px solid #fff;
+                                    }
+                                }
+                            }
+                        }
+                        &.isOn{
+                            dt{
+                                i{
+                                    background:#0048ff;
+                                    position: relative;
+                                    border: 1px solid #0048ff;
+                                    &:after{
+                                        content: '';
+                                        position: absolute;
+                                        left: 1px;
+                                        width: 8px;
+                                        height: 0;
+                                        top: 4px;
+                                        border-bottom: 2px solid #fff;
+                                    }
+                                }
+                            }
+                        }
+                        &.isDisplay{
+                            dd{
+                                display: block;
+                            }
+                        }
+                    }
+                }
+            }
+            .transferFr{
+                flex: 1;
+                border: 1px solid #e6ebf5;
+                border-left:0px;
+                border-radius: 4px;
+                overflow: hidden;
+                background: #FFFFFF;
+                display: inline-block;
+                vertical-align: middle;
+                width: 200px;
+                max-height: 100%;
+                box-sizing: border-box;
+                position: relative;
+                .transferBox{
+                    height: 360px !important;
+                    overflow: auto;
+                    padding: 10px 5px;
+                    p{
+                        clear: both;
+                        padding:5px 10px;
+                        cursor: pointer;
+                        overflow: hidden;
+                        i{
+                            float: left;
+                            width: 12px;
+                            height: 12px;
+                            border: 1px solid #ccc;
+                            margin-top: 2px;
+                            margin-right: 10px;
+                            border-radius:3px;
+                        }
+                        span{
+                            float: left;
+                            color: #333;
+                            font-size:$fontsize14;
+                        }
+                    }
+                }
+            }
+
         }
     }
 }
