--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -35,6 +35,7 @@
 @import './-singleperson.scss';
 @import './-stat.scss';
 @import './-productAnalysis.scss';
+@import './-dataOverview.scss';
 .clear{
   clear:both;
   display:block;  
@@ -1612,7 +1613,6 @@
         width: 8px;
         height: 8px;
         border-radius: 50%;
-        display: block;
         margin-right: 8px;
         margin-top: 8px;
       }
