--- a/src/styles/-productAnalysis.scss
+++ b/src/styles/-productAnalysis.scss
@@ -158,7 +158,7 @@
                                 position:relative;
                                 line-height:1;
                                 padding-top:8px;
-                                color:#fff;
+                                color:rgba(255,255,255,0.8);
                                 &:after{
                                     content:'';
                                     position:absolute;
@@ -758,7 +758,7 @@
                 border-radius:0px;
             }
             &>span{
-                font-size:$fontsize19;
+                font-size:$fontsize18;
                 color:#161616;
                 font-weight: bold;
             }
@@ -1061,7 +1061,7 @@
         background:#fff;
         margin-bottom:20px;
         .enquirieTrendTit{
-            font-size:$fontsize18;
+            font-size:$fontsize16;
             position:relative;
             line-height:20px;
             padding-left:30px;
@@ -1069,6 +1069,7 @@
             span{
                 font-size:$fontsize13;
                 color:#787878;
+                font-weight: normal;
             }
         }
         .enquirieTrendBox{
@@ -1249,7 +1250,7 @@
                     display:block;
                     position:relative;
                     padding-left:25px;
-                    font-size:$fontsize18;
+                    font-size:$fontsize16;
                     margin-bottom:90px;
                     color:#111111;
                     font-weight:bold;
@@ -1421,9 +1422,9 @@
                             }
                         }
                         &.active{   
-                            border:1px solid #3e87ff!important;    
+                            border:1px solid #0048ff!important;    
                             .yearNum{
-                                color:#3e87ff!important;
+                                color:#0048ff!important;
                             }   
                             &:before{
                                 display: none;
@@ -2133,22 +2134,50 @@
                     padding: 10px 5px;
                     p{
                         clear: both;
-                        padding:5px 10px;
-                        cursor: pointer;
                         overflow: hidden;
-                        i{
-                            float: left;
-                            width: 12px;
-                            height: 12px;
-                            border: 1px solid #ccc;
-                            margin-top: 2px;
-                            margin-right: 10px;
-                            border-radius:3px;
+                        margin: 10px 10px 14px 10px;
+                        &.transferBoxTop{
+                            span{
+                                float: left;
+                                color:#333;
+                                font-size: $fontsize14;
+                            }
+                            i{
+                                float: right;
+                                color:#004aff;
+                                font-size: $fontsize14;
+                                font-style: normal;
+                                cursor: pointer;
+                            }
                         }
-                        span{
-                            float: left;
-                            color: #333;
-                            font-size:$fontsize14;
+                        &.transferBoxTit{
+                            &.active{
+                                span{
+                                    color:#888f99;
+                                }
+                            }
+                            i{
+                                float: right;
+                                color:#a6abb3;
+                                width:14px;
+                                height:14px;
+                                font-style: normal;
+                                font-size:$fontsize14;
+                                &.transClose{
+                                    border:1px solid #a6abb3;
+                                    border-radius:50%;
+                                    font-style: normal;
+                                    text-align: center;
+                                    line-height: 9px;
+                                    font-size: 10px;
+                                    cursor: pointer;
+                                }
+                            }
+                            span{
+                                float: left;
+                                color: #333;
+                                font-size:$fontsize14;
+                            }
                         }
                     }
                 }
