--- a/src/styles/-sidebar.scss
+++ b/src/styles/-sidebar.scss
@@ -1,7 +1,7 @@
 ﻿.sidebar-container {
   display: flex;
   flex-direction: column;
-  background: linear-gradient(to right,#192136 0%, #212e4e 100%);
+  background: #192136;
   transition: width .25s ease-out;
   overflow: hidden!important;
   font-size:0;
