--- a/src/styles/-dataOverview.scss
+++ b/src/styles/-dataOverview.scss
@@ -91,6 +91,24 @@
   //     border: 1px solid rgba(255,255,255,.2);
   //   }
   // }
+  &.cn-stat{
+    .hxpage{
+      .slide-panel{
+        &:before{
+          height:179px;
+        }
+      }
+    }
+  }
+  &.en-stat{
+    .hxpage{
+      .slide-panel{
+        &:before{
+          height:143px;
+        }
+      }
+    }
+  }
 }
 .hxpage{
   background-image: linear-gradient(131deg, #24335b 0%, #1c1f40 100%);
@@ -201,12 +219,52 @@
     height: 236px;
     margin: 0 -25px;
     overflow: hidden;
+    position: relative;
+    &:before{
+      content:'';
+      display: block;
+      position: absolute;
+      right:0;
+      top: 20px;
+      width: 56px;
+      opacity: 1;
+      transition: opacity .5s;
+      background: linear-gradient(to right,rgba(43,49,82,0),rgba(33,39,73,.8) 90%);
+      z-index: 2;
+    }
+    .prev,.next{
+      position: absolute;
+      width: 16px;
+      height: 56px;
+      background:rgba(255,255,255,.1);
+      top:70px;
+      z-index: 10;
+      cursor: pointer;
+      .svg-i{
+        display: block;
+        width: 14px;
+        height: 14px;
+        font-size: 14px;
+        color: #fff;
+        margin: 21px 1px 0;
+      }
+    }
+    .prev{
+      left:0;
+      .svg-i{
+        transform: rotate(180deg);
+      }
+    }
+    .next{
+      right:0;
+    }
     .slide-box{
       height: 100%;
       white-space: nowrap;
       overflow: hidden;
       padding-top: 20px;
       position: relative;
+      z-index: 1;
       .item-slide{
         display: inline-block;
         padding: 0 0 0 30px;
@@ -329,7 +387,7 @@
     float: left;
     margin-top: 10px;
     .redtext{
-      font-size: 34px;
+      font-size: 30px;
       line-height: 42px;
       color: #fff;
       font-weight: bold;
