--- a/src/styles/-MemberCompare.scss
+++ b/src/styles/-MemberCompare.scss
@@ -64,6 +64,12 @@
         position: relative;
         .inul{
             overflow: hidden;
+            .nodata{
+                padding: 30px 20px;
+                text-align: center;
+                font-size: 14px;
+                color: #a1a1a1;
+            }
         }
         li{
             a{
@@ -275,6 +281,12 @@
         position: relative;
         .deul{
             overflow: hidden;
+            .nodata{
+                padding: 30px 20px;
+                text-align: center;
+                font-size: 14px;
+                color: #a1a1a1;
+            }
         }
         li{
             a{
@@ -469,6 +481,12 @@
         position: relative;
         .milul{
             overflow: hidden;
+            .nodata{
+                padding: 30px 20px;
+                text-align: center;
+                font-size: 14px;
+                color: #a1a1a1;
+            }
         }
         li{
             a{
@@ -872,6 +890,12 @@
     .awardRank{
         .inul{
             overflow: hidden;
+            .nodata{
+                padding: 30px 20px;
+                text-align: center;
+                font-size: 14px;
+                color: #a1a1a1;
+            }
         }
         li{
             a{
