--- a/src/styles/-productAnalysis.scss
+++ b/src/styles/-productAnalysis.scss
@@ -1957,7 +1957,7 @@
             clear: both;
             display: block;
             position: relative;
-            margin:19px 22px 0px 22px;
+            margin:19px 22px;
             .el-transfer-panel__filter{
                 clear: both;
                 display: block;
