--- a/src/styles/-DepIndex.scss
+++ b/src/styles/-DepIndex.scss
@@ -745,6 +745,7 @@
                     display: inline-block;
                     vertical-align: top;
                     line-height: 20px;
+                    font-style: normal;
                 }
             }
             .cet01{
