--- a/src/styles/-ownPush.scss
+++ b/src/styles/-ownPush.scss
@@ -3,25 +3,8 @@
         .item-search{
             float:left;
             padding: 10px 10px 10px 0;
-            .item-input{
-                &.sortup{
-                    background: #fff;
-                    border-color: #31dab5;
-                    color: #31dab5;
-                    &:hover{
-                        border-color:#f9a000;
-                        color:#f9a000;
-                    }
-                }
-                &.sortdown{
-                    background: #fff;
-                    border-color: #31dab5;
-                    color: #31dab5;
-                    &:hover{
-                        border-color:#f9a000;
-                        color:#f9a000;
-                    }
-                }
+            .resetBtn,.resetBtn span{
+                cursor: pointer;
             }
         }
         .select-panel{
