--- a/src/styles/-workOrder.scss
+++ b/src/styles/-workOrder.scss
@@ -309,10 +309,10 @@
         z-index: 4!important;
     }
     .el-table .el-table__cell.workIconleaf.is-hidden > *{visibility: visible;}
-    .el-table__header-wrapper{overflow: initial!important;}
+    // .el-table__header-wrapper{overflow: initial!important;}
     .workIconleaf{
         padding:0px;
-        overflow: initial!important;
+        overflow: visible!important;
         line-height: 35px;
         .el-table__column-filter-trigger{
             float: right;
@@ -550,5 +550,26 @@
         clear:both;
         display:block;
         color:#bbb;
+    }
+}
+.work-order-index{
+    .fixed-table .el-table__fixed-header-wrapper{
+        overflow: visible;
+    }
+    .fixed-table .el-table__fixed-right .el-table__fixed-header-wrapper{
+        overflow-x: hidden;
+        overflow-y: visible;
+    }
+    .fixed-table .el-table__fixed-header-wrapper .temHeader .temHeaderfix{
+        position: fixed;
+        right: 30px;
+        top: 180px;
+    }
+    .el-table__header-wrapper, .el-table__footer-wrapper{
+        overflow-y: visible;
+        overflow-x: hidden;
+    }
+    .el-table .el-table__cell.is-hidden > *{
+        visibility: visible;
     }
 }
