--- a/src/styles/-dataOverview.scss
+++ b/src/styles/-dataOverview.scss
@@ -471,11 +471,11 @@
 
   }
   &.score-top{
-    padding-bottom: 22px;
+    padding-bottom: 16px;
   }
   .top-view{
-    margin-top: 25px;
-    height: 314px;
+    margin-top: 10px;
+    height: 334px;
     .nodata{
       display: block;
       text-align: center;
@@ -485,7 +485,7 @@
     }
     .top-item{
       display: flex;
-      padding: 13px 5px;
+      padding: 14px 0;
       cursor: pointer;
       a{
         flex:1;
@@ -493,16 +493,17 @@
       }
       .top-icon{
         display: flex;
-        width: 50px;
+        width: 38px;
         height: 36px;
-        margin-right: 50px;
+        margin-right: 32px;
         text-align: center;
         position: relative;
         img{
           position: absolute;
-          left: 0;
+          left: -8px;
           width: 50px;
           top: -1px;
+          max-width: 50px!important;
         }
         span{
           font-size: 13px;
@@ -514,8 +515,8 @@
       }
       .top-img{
         display: flex;
-        width: 36px;
-        height: 36px;
+        width: 38px;
+        height: 38px;
         border-radius: 2px;
         overflow: hidden;
         position: relative;
@@ -551,16 +552,16 @@
         background-size:100%;
       } 
       .top-name{
-        width: 66px;
+        width: 68px;
         height: 34px;
         line-height: 36px;
         font-size: 13px;
         color: #fff;
-        text-align: center;
+        text-align: left;
         margin-left: 20px;
       }
       .top-width{
-        width: calc(100% - 335px);
+        width: calc(100% - 277px);
         height: 15px;
         box-sizing: border-box;
         position: relative;
@@ -616,8 +617,8 @@
       .userAward{
         color: #fff;
         font-size: 13px;
-        margin-left: 28px;
-        width: 85px;
+        margin-left: 16px;
+        width: 65px;
         line-height: 36px;
         .num01{
             background-image: linear-gradient(90deg,#f9c020 0%,#f83801 60%);
@@ -776,7 +777,7 @@
   }
 }
 .hxpage.btm_prochart{
-  padding-bottom: 10px;
+  padding-bottom: 30px;
   position: relative;
   .productChart{
     height: 336px;
@@ -819,7 +820,8 @@
   }
 }
 #HotProductChart{
-  height: 336px;
+  height: 324px;
+  margin-top: 0px;
 }
 
 .product_list{
@@ -863,5 +865,29 @@
   .overviewItem{
     width:50%;
     float: left;
+  }
+}
+
+.overbtm_box{
+  .hotpro_box{
+    width:calc(100% - 637px);
+    float: left;
+  }
+  .scoretop_box{
+    float: right;
+    width: 617px;
+  }
+}
+
+.hxpage.btm_prochart .title-view{
+  margin-bottom: 6px;
+}
+
+@media screen and(max-width:1600px){
+  .overbtm_box .scoretop_box{
+    width: 100%;
+  }
+  .overbtm_box .hotpro_box{
+    width: 100%;
   }
 }
